--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "init-lint": "eslint --init",
     "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp css sass vendor js images",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
+    "test:js": "eslint js/script.js",
     "build": "npm-run-all build:* test",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "postcss css/style.css --use autoprefixer -d ./css",
@@ -25,6 +27,9 @@
   "devDependencies": {
     "autoprefixer": "^10.2.1",
     "browser-sync": "^2.26.13",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "html-validate": "^4.1.0",
     "mkdirp": "^1.0.4",
     "node-sass": "^5.0.0",
