--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,9 @@
         "ecmaVersion": 12
     },
     "rules": {
-    }
+        
+    },
+    "globals": {
+        "Handlebars": false
+      }
 }
